--- a/theme/css/contact_form.css
+++ b/theme/css/contact_form.css
@@ -9,6 +9,7 @@ div.fullscreen_overlay {
 	overflow: auto;
 	z-index: 999999999;
 	padding: 15px;
+	display: none;
 }
 div.fullscreen_overlay div.form_container {
 	min-width: 250px;
@@ -29,7 +30,7 @@ div.fullscreen_overlay div.form_container .modal-body {
 	padding: 20px;
 	background-color: #eee;
 }
-div.fullscreen_overlay div.form_container .modal-body ul {
+div.fullscreen_overlay div.form_container .modal-body ul.fields {
 	width: 100%;
 	margin: 0;
 	padding: 0;
@@ -39,19 +40,26 @@ div.fullscreen_overlay div.form_container .modal-body p {
 	padding: 0;
 	text-align: left;
 }
-div.fullscreen_overlay div.form_container .modal-body li {
+div.fullscreen_overlay div.form_container .modal-body ul.fields li {
 	list-style-type: none;
 	display: block;
 	margin-bottom: 15px;
 }
-div.fullscreen_overlay div.form_container .modal-body li .popover-content {
+div.fullscreen_overlay div.form_container .modal-body ul.fields li .popover-content {
 	font-weight: normal;
 }
-div.fullscreen_overlay div.form_container .modal-body li input {
+div.fullscreen_overlay div.form_container .modal-body ul.fields li input {
 	width: 250px;
 	padding: 8px;
 	border: 1px solid #c0c0c0;
 	border-radius: 4px;
+}
+div.fullscreen_overlay div.form_container .modal-body ul.fields li input.error {
+	border-color: red !important;
+	animation-duration: 100ms;
+    animation-iteration-count: 4;
+    animation-name: shake-horizontal;
+    animation-timing-function: ease-in-out;
 }
 div.fullscreen_overlay div.form_container .modal-body .alert-warning {
 	text-align: left;
@@ -67,3 +75,105 @@ div.fullscreen_overlay div.form_container .modal-body .alert-warning button {
 div.fullscreen_overlay div.form_container .modal-footer p {
 	text-align: left;
 }
+
+@keyframes shake-horizontal {
+  2% {
+    transform: translate(1px, 0) rotate(0); }
+  4% {
+    transform: translate(4px, 0) rotate(0); }
+  6% {
+    transform: translate(7px, 0) rotate(0); }
+  8% {
+    transform: translate(-1px, 0) rotate(0); }
+  10% {
+    transform: translate(-1px, 0) rotate(0); }
+  12% {
+    transform: translate(1px, 0) rotate(0); }
+  14% {
+    transform: translate(-3px, 0) rotate(0); }
+  16% {
+    transform: translate(-8px, 0) rotate(0); }
+  18% {
+    transform: translate(-9px, 0) rotate(0); }
+  20% {
+    transform: translate(-3px, 0) rotate(0); }
+  22% {
+    transform: translate(-9px, 0) rotate(0); }
+  24% {
+    transform: translate(1px, 0) rotate(0); }
+  26% {
+    transform: translate(10px, 0) rotate(0); }
+  28% {
+    transform: translate(9px, 0) rotate(0); }
+  30% {
+    transform: translate(-2px, 0) rotate(0); }
+  32% {
+    transform: translate(9px, 0) rotate(0); }
+  34% {
+    transform: translate(2px, 0) rotate(0); }
+  36% {
+    transform: translate(-5px, 0) rotate(0); }
+  38% {
+    transform: translate(3px, 0) rotate(0); }
+  40% {
+    transform: translate(0px, 0) rotate(0); }
+  42% {
+    transform: translate(4px, 0) rotate(0); }
+  44% {
+    transform: translate(-7px, 0) rotate(0); }
+  46% {
+    transform: translate(-4px, 0) rotate(0); }
+  48% {
+    transform: translate(9px, 0) rotate(0); }
+  50% {
+    transform: translate(-6px, 0) rotate(0); }
+  52% {
+    transform: translate(-3px, 0) rotate(0); }
+  54% {
+    transform: translate(3px, 0) rotate(0); }
+  56% {
+    transform: translate(6px, 0) rotate(0); }
+  58% {
+    transform: translate(-5px, 0) rotate(0); }
+  60% {
+    transform: translate(-6px, 0) rotate(0); }
+  62% {
+    transform: translate(8px, 0) rotate(0); }
+  64% {
+    transform: translate(8px, 0) rotate(0); }
+  66% {
+    transform: translate(-7px, 0) rotate(0); }
+  68% {
+    transform: translate(8px, 0) rotate(0); }
+  70% {
+    transform: translate(6px, 0) rotate(0); }
+  72% {
+    transform: translate(5px, 0) rotate(0); }
+  74% {
+    transform: translate(6px, 0) rotate(0); }
+  76% {
+    transform: translate(7px, 0) rotate(0); }
+  78% {
+    transform: translate(-2px, 0) rotate(0); }
+  80% {
+    transform: translate(1px, 0) rotate(0); }
+  82% {
+    transform: translate(0px, 0) rotate(0); }
+  84% {
+    transform: translate(-6px, 0) rotate(0); }
+  86% {
+    transform: translate(0px, 0) rotate(0); }
+  88% {
+    transform: translate(1px, 0) rotate(0); }
+  90% {
+    transform: translate(-1px, 0) rotate(0); }
+  92% {
+    transform: translate(1px, 0) rotate(0); }
+  94% {
+    transform: translate(4px, 0) rotate(0); }
+  96% {
+    transform: translate(1px, 0) rotate(0); }
+  98% {
+    transform: translate(3px, 0) rotate(0); }
+  0%, 100% {
+    transform: translate(0, 0) rotate(0); } }
