--- a/theme/css/bodyobjects.css
+++ b/theme/css/bodyobjects.css
@@ -36,7 +36,7 @@
     margin-top: 20px;
 }
 .index-image {
-    background: url(/theme/images/nn-drug-rehab-index-parts-sprite.jpg) no-repeat 0 0;
+    background: url(../images/nn-drug-rehab-index-parts-sprite.jpg) no-repeat 0 0;
     width: 128px;
     height: 128px;
     position: absolute;
@@ -127,7 +127,7 @@
 }
 
 .intro-para .video-backdrop {
-    background: url(/theme/images/intro-film-backdrop.jpg) center no-repeat;
+    background: url(../images/intro-film-backdrop.jpg) center no-repeat;
     background-size: cover;
     margin: 0 calc(50% - 50vw);
 }
