--- a/theme/css/contact_form.css
+++ b/theme/css/contact_form.css
@@ -62,6 +62,7 @@ div.fullscreen_overlay div.form_container .modal-body ul.fields li input.error {
     animation-timing-function: ease-in-out;
 }
 div.fullscreen_overlay div.form_container .modal-body .alert-warning {
+	position: relative;
 	text-align: left;
 	color: #d57910;
 	border-color: #d70;
@@ -70,6 +71,9 @@ div.fullscreen_overlay div.form_container .modal-body .alert-warning {
 	display: none;
 }
 div.fullscreen_overlay div.form_container .modal-body .alert-warning button {
+	position: absolute;
+	right: 15px;
+	top: 15px;
 	color: #a11;
 }
 div.fullscreen_overlay div.form_container .modal-footer p {
