--- a/theme/css/jumbotron-banner.css
+++ b/theme/css/jumbotron-banner.css
@@ -49,6 +49,12 @@
 	background-color: rgba(0,20,0,0.5);
 	cursor: pointer;
 }
+#jumbotron_banner .jumbotron-content .message .watch {
+	border: 2px solid transparent;
+}
+#jumbotron_banner .jumbotron-content .message .watch:hover {
+	border: 2px solid rgba(255,255,255,0.8);
+}
 
 @media (max-width: 650px) {
 	#jumbotron_banner .jumbotron-content .hex-image {
