--- a/theme/css/contact_form.css
+++ b/theme/css/contact_form.css
@@ -6,10 +6,10 @@ div.fullscreen_overlay {
 	top: 0;
 	text-align: center;
 	background-color: rgba(0,0,0,0.5);
-	overflow: auto;
 	z-index: 999999999;
 	padding: 15px;
 	display: none;
+  animation-duration: 800ms !important;
 }
 div.fullscreen_overlay div.form_container {
 	min-width: 250px;
@@ -22,8 +22,8 @@ div.fullscreen_overlay div.form_container {
 	-webkit-box-shadow: 2px 2px 30px 2px rgba(0,0,0,0.75);
 	-moz-box-shadow: 2px 2px 30px 2px rgba(0,0,0,0.75);
 	box-shadow: 2px 2px 30px 2px rgba(0,0,0,0.75);
-  -webkit-animation-delay: 200ms;
-  animation-delay: 200ms;
+  animation-duration: 800ms;
+  animation-delay: 0ms;
 }
 div.fullscreen_overlay div.form_container div.modal-header {
 	text-align: left;
